# fieldx_plus

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: fieldx_plus.yml
core/: Cargo.toml
core/src/: lib.rs  traits.rs
core/tests/: app_role.rs  async_simple_app.rs  nonsync_generic_app.rs  nonsync_simple_app.rs  parent_with_builder.rs  sync_generic_parent.rs  sync_simple_app.rs
macros/: Cargo.toml  release.toml
macros/src/: app.rs  codegen.rs  ctx.rs  lib.rs  traits.rs  types.rs
macros/src/app/: agent_producer.rs  app_producer.rs  obj_producer.rs
