[workspace.package]
    authors      = ["Vadim Belman"]
    categories   = ["development-tools::procedural-macro-helpers", "rust-patterns"]
    edition      = "2021"
    exclude      = ["Makefile.toml", "release.toml"]
    keywords     = ["lazy", "field", "macro", "builder", "struct"]
    license-file = "LICENSE"
    repository   = "https://github.com/vrurg/fieldx_plus.git"

[workspace]
    members  = ["core", "macros"]
    resolver = "2"

[workspace.dependencies]
    darling            = ">=0.20.7"
    fieldx             = { version = ">=0.1.5" }
    fieldx_aux         = { version = ">=0.1.5" }
    fieldx_plus        = { version = "0.1.0", path = "core" }
    fieldx_plus_macros = { version = "0.1.1-beta.2", path = "macros" }
    proc-macro2        = "1.0"
    quote              = "1.0"
    syn                = "2.0"
    thiserror          = "1.0"

[patch.crates-io]
    fieldx_plus        = { path = "core" }
    fieldx_plus_macros = { path = "macros" }
