[workspace.package]
    authors      = ["Vadim Belman"]
    categories   = ["development-tools::procedural-macro-helpers", "rust-patterns"]
    edition      = "2021"
    exclude      = ["Makefile.toml", "release.toml"]
    keywords     = ["lazy", "field", "macro", "builder", "struct"]
    license-file = "LICENSE"
    repository   = "https://github.com/vrurg/fieldx_plus.git"

[workspace]
    members  = ["core", "macros"]
    resolver = "2"

[workspace.dependencies]
    darling            = ">=0.20.7"
    fieldx             = { path = "../fieldx/fieldx", version = ">=0.1.8" }
    fieldx_aux         = { path = "../fieldx/fieldx_aux/", version = ">=0.1.8" }
    fieldx_plus        = { version = "0.1.3-beta.1", path = "core" }
    fieldx_plus_macros = { version = "0.1.3-beta.1", path = "macros" }
    once_cell          = "1.20"
    proc-macro2        = "1.0"
    quote              = "1.0"
    syn                = "2.0"
    thiserror          = "1.0"

[patch.crates-io]
    fieldx_plus        = { path = "core" }
    fieldx_plus_macros = { path = "macros" }
