[package]
    authors.workspace      = true
    categories.workspace   = true
    description            = "Design patterns built on top of fieldx crate "
    edition.workspace      = true
    exclude.workspace      = true
    keywords.workspace     = true
    license-file.workspace = true
    name                   = "fieldx_plus"
    readme                 = "../README.md"
    repository.workspace   = true
    version                = "0.1.3"

[dependencies]
    fieldx             = { workspace = true }
    fieldx_plus_macros = { workspace = true }

[dev-dependencies]
    fieldx      = { workspace = true, features = ["sync"] }
    parking_lot = { version = "0.12" }
    thiserror   = { workspace = true }

[features]
    async      = ["fieldx/async"]
    send_guard = ["fieldx/send_guard"]
    serde      = ["fieldx/serde"]
    sync       = ["fieldx/sync"]

[badges]
    github = { repository = "vrurg/fieldx_plus", workflow = "CI" }
