[package]
    authors.workspace      = true
    categories.workspace   = true
    description            = "Design patterns built on top of fieldx crate "
    edition.workspace      = true
    exclude.workspace      = true
    keywords.workspace     = true
    license-file.workspace = true
    name                   = "fieldx_plus"
    readme                 = "../README.md"
    repository.workspace   = true
    version                = "0.1.12"

[dependencies]
    fieldx             = { workspace = true }
    fieldx_plus_macros = { workspace = true }

[dev-dependencies]
    fieldx      = { workspace = true }
    parking_lot = { version = "0.12" }
    thiserror   = { workspace = true }
    tokio       = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }

[features]
    async              = ["fieldx/async"]
    async-lock         = ["async", "fieldx/async-lock"]
    async-lock-backend = ["fieldx/async-lock-backend"]
    async-tokio        = ["async", "fieldx/async-tokio"]
    clonable-lock      = ["fieldx/clonable-lock"]
    send_guard         = ["fieldx/send_guard"]
    serde              = ["fieldx/serde"]
    sync               = ["fieldx/sync"]
    tokio-backend      = ["fieldx/tokio-backend"]

[badges]
    github = { repository = "vrurg/fieldx_plus", workflow = "CI" }
