[package]
    authors.workspace      = true
    categories.workspace   = true
    description            = "Heler macros for fieldx_plus crate"
    edition.workspace      = true
    exclude.workspace      = true
    keywords.workspace     = true
    license-file.workspace = true
    name                   = "fieldx_plus_macros"
    readme                 = "../README.md"
    repository.workspace   = true
    version                = "0.1.10-beta.1"

[dependencies]
    darling     = { workspace = true }
    fieldx      = { workspace = true }
    fieldx_aux  = { workspace = true }
    fieldx_core = { workspace = true }
    once_cell   = { workspace = true }
    proc-macro2 = { workspace = true }
    quote       = { workspace = true }
    syn         = { workspace = true }

[lib]
    proc-macro = true

[features]
    async      = ["fieldx/async"]
    send_guard = ["fieldx/send_guard"]
    serde      = []
    sync       = ["fieldx/sync"]
