[package]
    authors.workspace      = true
    categories.workspace   = true
    description            = "Heler macros for fieldx_plus crate"
    edition.workspace      = true
    exclude.workspace      = true
    keywords.workspace     = true
    license-file.workspace = true
    name                   = "fieldx_plus_macros"
    readme                 = "../README.md"
    repository.workspace   = true
    version                = "0.1.11"

[dependencies]
    darling     = { workspace = true }
    fieldx      = { workspace = true }
    fieldx_aux  = { workspace = true }
    fieldx_core = { workspace = true }
    once_cell   = { workspace = true }
    proc-macro2 = { workspace = true }
    quote       = { workspace = true }
    syn         = { workspace = true }

[lib]
    proc-macro = true

[features]
    async              = ["fieldx/async", "fieldx_core/async"]
    async-lock         = ["async", "fieldx/async-lock"]
    async-lock-backend = ["fieldx/async-lock-backend"]
    async-tokio        = ["async", "fieldx/async-tokio"]
    clonable-lock      = ["fieldx/clonable-lock", "fieldx_core/clonable-lock"]
    send_guard         = ["fieldx/send_guard"]
    serde              = ["fieldx/serde", "fieldx_aux/serde", "fieldx_core/serde"]
    sync               = ["fieldx/sync", "fieldx_core/sync"]
    tokio-backend      = ["fieldx/tokio-backend"]
